--- a/DTT_project/public/css/login_style.css
+++ b/DTT_project/public/css/login_style.css
@@ -1,19 +1,23 @@
-body {background-color: #00a0b0; margin-right: 700px; margin-top: 25px}
-hr {background-color:rgb(51, 146, 156); width: 1700px;padding-top: 3px;}
-main {background-color: white; border-radius: 15px; height: 900px; width: 1780px}
-form input[type=text] {border-radius: 7px; width: 570px;height: 50px; }
-form input[type=password] {border-radius: 7px; width: 570px;height: 50px;}
-form input[type=submit] {border-radius: 7px; width:250px; margin-top: 50px; margin-left: 220px;
-    background-color: #ef7d50; color:white;}
+body {background-color: #00a0b0; margin-right: 38%; margin-top: 25px}
+hr {background-color:rgb(51, 146, 156); width: 96%;padding-top: 3px;}
+main {background-color: white; border-radius: 15px; height: auto; width: 162%;}
+form input[type=text] {border-radius: 7px; width: 74%;height: 98%}
+form input[type=password] {border-radius: 7px; width: 74%;height: 98%}
+form input[type=submit] {border-radius: 7px; width:32%; margin-top: 50px; margin-left: 31%;
+    background-color: #ef7d50; color:white; min-width: 100px;}
 .image {padding-top: 70px; padding-left: 60px; padding-bottom: 30px}
-.image img {width:620px; height: 200px;}
-.form_class {background-color: #fff4cf; width: 800px; height: 400px; margin-left: 480px; border-radius: 15px;
-    padding-top: 90px; padding-left: 40px;font-size: 31px;}
-.pass_label {margin-left: 10px}
+.image img {width:36%; height: 14%;}
+.form_class {background-color: #fff4cf; width: 45%; height: auto; margin-left: 28%; border-radius: 15px;
+    padding-top: 5%; padding-left: 2%;font-size: 31px; padding-bottom: 3%;}
+.pass_label {margin-left: 10px;}
 .username_field {margin-bottom: 30px; height: 50px;}
 .top_hr {margin-top: 4px; margin-bottom: 45px;}
 .bottom_hr {margin-top: 45px;}
-.footer {font-size: 16px;padding-top: 20px;padding-left: 40px;}
-.footer a {text-decoration: underline; color: #551a8b;}
+.footer {font-size: 16px;padding-top: 15px;padding-left: 40px; padding-bottom: 25px;}
+.underlined_a {text-decoration: underline; color: #551a8b;}
 #error_message {background-color: #ff2222; color: white; border-radius: 5px;font-size: 16px;padding-left: 13px;
-    width: 713px;}
+    width: 93%;}
+@media screen and (max-width: 1380px) {.pass_label { display: none; } }
+@media screen and (max-width: 1380px) {.field_label { display: none; } }
+@media screen and (max-width: 1380px) {.username_field { padding-left: 15% } }
+@media screen and (max-width: 1380px) {.password_field { padding-left: 15% } }
